Closed
Bug 207081
Opened 23 years ago
Closed 23 years ago
only create profile window comes up on start attempt
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mrmazda, Assigned: timeless)
Details
Attachments
(1 file, 1 obsolete file)
|
4.59 KB,
patch
|
mkaply
:
review+
|
Details | Diff | Splinter Review |
2003052508 OS/2 trunk (OK in 2003052412 and W32 2003052508)
To reproduce:
1-mozilla.exe from program obect that worked yesterday with existing profile
Actual results:
1-create profile window launches, which doesn't find existing profile when you
try to "create" it, even after deleting registry.dat and trying again
Expected results:
1-browser starts up using existing profile
Same existing profile works fine with builds from 21 May thru 24 May even after
failing with 25 May
Comment 1•23 years ago
|
||
.
Assignee: general → ccarlen
Component: Browser-General → Profile Manager BackEnd
QA Contact: general → gbush
Comment 2•23 years ago
|
||
This appears to be caused by:
http://bugzilla.mozilla.org/show_bug.cgi?id=205609
the callers were actually checking the return code, but the callee was a bit broken.
Assignee: ccarlen → timeless
Component: Profile Manager BackEnd → XPCOM
QA Contact: gbush → mrmazda
Attachment #124238 -
Attachment description: return instead of break →
Attachment #124238 -
Attachment is obsolete: true
Attachment #124240 -
Flags: review?(dougt)
Comment 6•23 years ago
|
||
mike, can you verify that this works?
Comment 7•23 years ago
|
||
Comment on attachment 124240 [details] [diff] [review]
return result instead of breaking
I can't verify right now because I don't have a build right now.
Does this need to go on the branch?
Attachment #124240 -
Flags: review?(dougt)
Attachment #124240 -
Flags: review+
Attachment #124240 -
Flags: approval1.4+
Comment 8•23 years ago
|
||
Fix was checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 9•23 years ago
|
||
Comment on attachment 124240 [details] [diff] [review]
return result instead of breaking
removing approval for tracking purposes
Attachment #124240 -
Flags: approval1.4+
You need to log in
before you can comment on or make changes to this bug.
Description
•