Bug 207081 only create profile window comes up on start attempt GetSpecialSystemDirectory used 'break;' instead of returning NS_OK on OS/2 and assigned its rv to an undeclared variable instead of returninng on Mac Classic. removed tabs. r=mkaply a=mkaply